[gd_scene load_steps=14 format=3 uid="uid://bp3c2tkeiiouq"]

[ext_resource type="Script" path="res://escenas/niveles/menu.gd" id="1_2puqo"]
[ext_resource type="Texture2D" uid="uid://djgaa5itogrb3" path="res://escenas/assets/Menu/Fondo menu.png" id="2_fs2wg"]
[ext_resource type="Texture2D" uid="uid://pwbr8o7fa8xc" path="res://escenas/assets/Menu/Jugar.png" id="2_fyyyq"]
[ext_resource type="Texture2D" uid="uid://dksuoyvqjntgt" path="res://escenas/assets/Menu/Salir.png" id="3_b44mj"]
[ext_resource type="Texture2D" uid="uid://rrjcfp80bgms" path="res://escenas/assets/Menu/Falcon.png" id="4_canof"]
[ext_resource type="Texture2D" uid="uid://3j2xn6akm03o" path="res://escenas/assets/Menu/Creditos.png" id="4_sue3u"]
[ext_resource type="Texture2D" uid="uid://c08a8pt0jhjp6" path="res://escenas/assets/Menu/titulo.png" id="7_bdk4f"]
[ext_resource type="Texture2D" uid="uid://c6boeu61unk0j" path="res://escenas/assets/Menu/Crunch.png" id="8_i6hhn"]
[ext_resource type="AudioStream" uid="uid://4detfemwqbfj" path="res://escenas/assets/sonidos/Main SONG.wav" id="9_snpwj"]
[ext_resource type="Texture2D" uid="uid://c3m8uhsfxs4da" path="res://escenas/assets/Menu/peluca.png" id="10_jyp42"]

[sub_resource type="Animation" id="Animation_m05t1"]
resource_name = "peluca"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1530, 736), Vector2(1530, 720), Vector2(1530, 706), Vector2(1530, 717)]
}

[sub_resource type="Animation" id="Animation_505dl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1530, 736)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cyh1s"]
_data = {
"RESET": SubResource("Animation_505dl"),
"peluca": SubResource("Animation_m05t1")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_2puqo")

[node name="FondoMenu" type="Sprite2D" parent="."]
position = Vector2(959, 544)
texture = ExtResource("2_fs2wg")

[node name="play" type="Button" parent="."]
offset_left = 560.0
offset_top = 449.0
offset_right = 889.0
offset_bottom = 608.0
size_flags_horizontal = 4
size_flags_vertical = 6
metadata/_edit_group_ = true

[node name="Jugar" type="Sprite2D" parent="play"]
position = Vector2(163, 85)
scale = Vector2(1.03333, 1.07635)
texture = ExtResource("2_fyyyq")
region_enabled = true
region_rect = Rect2(185.483, 71.9053, 390.133, 203.641)

[node name="quit" type="Button" parent="."]
offset_left = 569.0
offset_top = 867.0
offset_right = 874.0
offset_bottom = 1003.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "quit
"
metadata/_edit_group_ = true

[node name="Salir" type="Sprite2D" parent="quit"]
position = Vector2(150, 64)
texture = ExtResource("3_b44mj")
region_enabled = true
region_rect = Rect2(185.483, 455.608, 379.415, 197.21)

[node name="creditos" type="Button" parent="."]
offset_left = 733.0
offset_top = 654.0
offset_right = 1062.0
offset_bottom = 797.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "creditos"
metadata/_edit_group_ = true

[node name="Creditos" type="Sprite2D" parent="creditos"]
position = Vector2(170, 70)
texture = ExtResource("4_sue3u")
region_enabled = true
region_rect = Rect2(314.098, 239.105, 497.313, 210.072)

[node name="crunch" type="Button" parent="."]
offset_left = 999.0
offset_top = 301.0
offset_right = 1295.0
offset_bottom = 444.0

[node name="Crunch" type="Sprite2D" parent="crunch"]
z_index = 1
position = Vector2(143, 80)
texture = ExtResource("8_i6hhn")
region_enabled = true
region_rect = Rect2(937.184, 258.843, 404.624, 251.593)

[node name="Falcon" type="Sprite2D" parent="."]
position = Vector2(961, 536)
texture = ExtResource("4_canof")

[node name="Titulo" type="Sprite2D" parent="."]
position = Vector2(597, 215)
texture = ExtResource("7_bdk4f")
region_enabled = true
region_rect = Rect2(0, 0, 1198.91, 433.641)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_snpwj")
volume_db = -6.933
autoplay = true

[node name="Peluca" type="Sprite2D" parent="."]
position = Vector2(1530, 736)
texture = ExtResource("10_jyp42")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Peluca"]
autoplay = "peluca"
libraries = {
"": SubResource("AnimationLibrary_cyh1s")
}

[connection signal="mouse_entered" from="play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="creditos" to="." method="_on_creditos_mouse_entered"]
[connection signal="mouse_exited" from="creditos" to="." method="_on_creditos_mouse_exited"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
[connection signal="mouse_entered" from="crunch" to="." method="_on_crunch_mouse_entered"]
[connection signal="mouse_exited" from="crunch" to="." method="_on_crunch_mouse_exited"]
